--- a/bio.html
+++ b/bio.html
@@ -1,6 +1,13 @@
 <!doctype html>
 <html>
+<head>
+	<title> Biography </title>
+	<meta charset = "utf-8" >
+</head>
 
+<body>
+	<h1> -Biography- </h1>
+	<p> My name is James Wesley Clark and I was born and raised in Washington, D.C. Both my parents are lawyers and I have an older brother and sister who are out of college. For my education, I spent the first eleven years at a small Catholic school down the street from Georgetown until graduating from there and attending the Potomac School in Mclean for high school. While there, I played soccer, track and cross country. My favorite subjects were Math, Computer Science and History. I am an avid pet lover with two dogs and two cats back home. My favorite pastimes are movies, music and podcasts. </p>
 
 
 </html>
